# clones

./: .gitignore  LICENSE  README.md
dns/: README.md  rg_resolver.code-workspace
dns/research/: c4model.txt  name_server_use_cases.txt  rfc_1034_notes.txt
dns/resolver/: Cargo.toml  resolver.code-workspace
dns/resolver/rg-resolver/: Cargo.toml  client_request.json
dns/resolver/rg-resolver-client/: Cargo.toml
dns/resolver/rg-resolver-client/src/: lib.rs
dns/resolver/rg-resolver-common/: Cargo.toml
dns/resolver/rg-resolver-common/src/: lib.rs
dns/resolver/rg-resolver/src/: client.rs  connection.rs  main.rs  message.rs  name.rs  net.rs  orig_main.rs  process.rs  rr.rs
dns/resolver/rg_resolver/: Cargo.toml
dns/resolver/rg_resolver/src/: lib.rs
dns/resolver/src/: lib.rs  main.rs
dns/resolver_work/rg-resolver-client/: Cargo.toml  uses.txt
dns/resolver_work/rg-resolver-client/src/: client.rs  lib.rs
dns/resolver_work/rg-resolver-common/src/: lib.rs
dns/rg_resolver/: Cargo.toml
dns/rg_resolver/src/: lib.rs  main.rs
docker/: Research.md
docker/.obsidian/: workspace.json
docker/Notes/2025/: 11-11 (11 Nov).md  11-12 (12 Nov).md  11-13 (13 Nov).md
docker/runc/: AI Suggested  Learning Path.md
docker/src/: CMakeLists.txt  http.cpp  http.h  main.cpp  pch.h
ipsec/ipsec/: Cargo.toml
ipsec/rfc/: notes.txt
ping/: Cargo.toml
ping/src/: main.rs  ping.rs
vpn/wireguard_test/source/: CMakeLists.txt
