[package]
name = "rg-resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = "1.0.86"
